--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,13 +26,13 @@ jobs:
           BROWSER_OPTIONS: browserType=chromium;baseURL=https://demoqa.com;screenSizeWidth=1920;screenSizeHeight=1080;headlessMode=true;slowMoMode=0;tracingMode=true;videoMode=true
           CI_RUN: true
 
-      - name: Create test report
-        uses: dorny/test-reporter@v1
-        if: success() || failure()
-        with:
-          name: Test Execution Report
-          path: target/surefire-reports/TEST-*.xml
-          reporter: java-junit
+#      - name: Create test report
+#        uses: dorny/test-reporter@v1
+#        if: success() || failure()
+#        with:
+#          name: Test Execution Report
+#          path: target/surefire-reports/TEST-*.xml
+#          reporter: java-junit
 
       - name: Attach artifacts on failure
         uses: actions/upload-artifact@v4
